build_uboot: Don't install python2

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Install toolchain
         run: >
             sudo apt-get update;
-            sudo apt-get install build-essential crossbuild-essential-arm64 device-tree-compiler python2;
+            sudo apt-get install build-essential crossbuild-essential-arm64 device-tree-compiler;
       - name: Clone rkbin repository
         uses: actions/checkout@v3
         with:
