--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -77,13 +77,13 @@ actions:
   - action: raw
     description: Writing U-Boot SPL image
     origin: recipe
-    source: '/u-boot/idblock.bin'
+    source: '/u-boot/idbloader.img'
     offset: {{ sector 64 }}
 
   - action: raw
     description: Writing uboot.img
     origin: recipe
-    source: '/u-boot/uboot.img'
+    source: '/u-boot/u-boot.itb'
     offset: 8388608
 
   - action: run
