--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -89,6 +89,11 @@ actions:
     chroot: true
     script: scripts/setup-user.sh {{ $username }} {{ $password }}
 
+  - action: overlay
+    description: Copy repart config
+    source: overlays/repart.d/
+    destination: /usr/lib/repart.d/
+
   - action: run
     description: Clean rootfs
     chroot: true
@@ -97,16 +102,19 @@ actions:
   - action: image-partition
     description: Partition image
     imagename: {{ $image }}
-    imagesize: 1GB
+    imagesize: 2GB
     partitiontype: gpt
     mountpoints:
       - mountpoint: /
         partition: root
+        options:
+          - 'x-systemd.growfs'
     partitions:
       - name: root
         fs: ext4
         start: 32MB
         end: 100%
+        parttype: b921b045-1df0-41c3-af44-4c6f280d3fae  # ARM 64 root type
 
   - action: filesystem-deploy
     description: Deploy filesystem image
