debos: run tasksel install standard
Theoretically I should be able to apt-get this with
"install standard^", but in practice this doesn't seem to actually
find the task "standard", which is odd.

Oh well, this works, but is ugly.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -89,6 +89,11 @@ actions:
     chroot: true
     script: scripts/setup-user.sh {{ $username }} {{ $password }}
 
+  - action: run
+    description: tasksel standard
+    chroot: true
+    command: tasksel install standard
+
   - action: overlay
     description: Copy repart config
     source: overlays/repart.d/
