debos: Get rid of tasksel
It apparently just hangs in the pipeline, despite falling back
on its readline output, which is a shame.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -39,6 +39,16 @@ actions:
       - alsa-utils
       - dbus-broker
       - systemd-resolved
+      - systemd-timesyncd
+      - libpam-systemd
+      - locales
+      - manpages
+      - pciutils
+      - bzip2
+      - lsof
+      - traceroute
+      - libnss-systemd
+      - liblockfile-bin
 
   # Can't use hostnamectl here because systemd isn't pid 1 in this case
   # or some garbage
@@ -88,11 +98,6 @@ actions:
     description: Set up user
     chroot: true
     script: scripts/setup-user.sh {{ $username }} {{ $password }}
-
-  - action: run
-    description: tasksel standard
-    chroot: true
-    command: tasksel install standard
 
   - action: overlay
     description: Copy repart config
