--- a/config
+++ b/config
@@ -5957,7 +5957,7 @@ CONFIG_DRM_VGEM=m
 # CONFIG_DRM_VKMS is not set
 CONFIG_DRM_ROCKCHIP=m
 CONFIG_ROCKCHIP_VOP=y
-# CONFIG_ROCKCHIP_VOP2 is not set
+CONFIG_ROCKCHIP_VOP2=y
 CONFIG_ROCKCHIP_ANALOGIX_DP=y
 CONFIG_ROCKCHIP_CDN_DP=y
 CONFIG_ROCKCHIP_DW_HDMI=y
