debos: Configure network interfaces
Use systemd-networkd because the default Debian stuff is utter
and irredeemable trash.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -60,6 +60,11 @@ actions:
       echo "127.0.0.1    localhost {{ $hostname }}" >/etc/hosts
 
   - action: overlay
+    description: Copy systemd-networkd config
+    source: overlays/systemd-networkd/
+    destination: /etc/systemd/network/
+
+  - action: overlay
     description: Copy kernel debs to /root
     source: overlays/linux-kernel/
     destination: /root/
