debos: Add ncurses-term and parted
Why are these not in by default? Who knoooows

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -50,6 +50,8 @@ actions:
       - libnss-systemd
       - liblockfile-bin
       - e2fsprogs
+      - parted
+      - ncurses-term
 
   # Can't use hostnamectl here because systemd isn't pid 1 in this case
   # or some garbage
