debos: Add broken and busted initramfs rootfs resizer
It totally works, absolutely no issues, until it comes to
remounting the filesystem it just resized, at which point it fails,
but you can then do it manually from the shell it drops you into,
which is great awesome I love race conditions I wish I was a race
condition when my dad asked me "son what do you want to do when you
grow up" I interrupted him halfway through the sentence and yelled
"WHAT DO I WANT TO DO? I DON'T KNOW FINISH YOUR QUESTION" that's
how much I love race conditions.

AAAAaaaaaaaaaaaaaa I guess I'll go make tea.

Apologies to anyone who reads this commit log.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -68,6 +68,11 @@ actions:
     destination: /etc/systemd/network/
 
   - action: overlay
+    description: Copy initramfs from Plebian
+    source: overlays/initramfs-tools-plebian/
+    destination: /etc/initramfs-tools/
+
+  - action: overlay
     description: Copy kernel debs to /root
     source: overlays/linux-kernel/
     destination: /root/
@@ -81,16 +86,6 @@ actions:
     description: Clean up debs in /root
     chroot: true
     command: rm /root/*.deb
-
-  - action: overlay
-    description: Copy initramfs module list
-    source: overlays/initramfs-tools/
-    destination: /etc/initramfs-tools/
-
-  - action: run
-    description: Build initramfs
-    chroot: true
-    command: update-initramfs -u -k all
 
   - action: run
     description: Set up u-boot default file
