debos: Install bluetooth

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -52,6 +52,7 @@ actions:
       - e2fsprogs
       - parted
       - ncurses-term
+      - bluetooth
 
   # Can't use hostnamectl here because systemd isn't pid 1 in this case
   # or some garbage
