debos: Install the standard set of Debian packages
Apparently I already manually pull all of these in, but it's better
to do this anyway in case it changes.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -53,6 +53,12 @@ actions:
       - parted
       - ncurses-term
       - bluetooth
+      - gawk
+
+  - action: run
+    description: Install standard packages
+    chroot: true
+    script: scripts/install-standard.sh
 
   # Can't use hostnamectl here because systemd isn't pid 1 in this case
   # or some garbage
