debos: Add OpenSSH host key regen service
This was a pain to figure out. Turns out you can't use dpkg-reconfigure
for it because it itself tries to start sshd.service, which isn't good
when you have a Before=sshd.service declaration in your unit doing this.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -75,6 +75,18 @@ actions:
     destination: /etc/network/interfaces.d/
 
   - action: overlay
+    description: Copy custom systemd units
+    source: overlays/systemd-units/
+    destination: /usr/lib/systemd/system/
+
+  - action: run
+    description: Enable custom systemd units
+    chroot: True
+    command: |
+      mkdir -p /etc/systemd/system/multi-user.target.wants
+      ln -s /usr/lib/systemd/system/regen-openssh-keys.service /etc/systemd/system/multi-user.target.wants/regen-openssh-keys.service
+
+  - action: overlay
     description: Copy initramfs from Plebian
     source: overlays/initramfs-tools-plebian/
     destination: /etc/initramfs-tools/
