workflow/build-image: Use Model B config for u-boot
The EVB config works, but it's probably better if we use the
dedicated Model B config for Model B images.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -11,6 +11,11 @@ jobs:
             uboot-name: "quartz64a"
           },
           {
+            name: "Quartz64 Model B",
+            uboot-config: "quartz64-b-rk3566_defconfig",
+            uboot-name: "quartz64b"
+          },
+          {
             name: "EVB",
             uboot-config: "evb-rk3568_defconfig",
             uboot-name: "evb-rk3568"
@@ -96,7 +101,7 @@ jobs:
           {
             name: "Quartz64 Model B",
             debos-yaml: "debian-quartz64b.yaml",
-            uboot-name: "evb-rk3568"
+            uboot-name: "quartz64b"
           },
           {
             name: "SOQuartz CM4 IO Board",
