--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -65,8 +65,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install toolchain
         run: |
-            sudo apt-get update
-            sudo apt-get install -yq build-essential crossbuild-essential-arm64 device-tree-compiler flex bison bc kmod cpio libssl-dev
+            sudo apt-get -yq update && sudo apt-get -yq upgrade
+            sudo apt-get -yq install build-essential crossbuild-essential-arm64 device-tree-compiler \
+            autoconf bc bison flex ccache cpio dkms fakeroot kmod quilt rsync dh-exec \
+            libssl-dev libncurses-dev libelf-dev libudev-dev libpci-dev libiberty-dev
       - name: Clone kernel repository
         uses: actions/checkout@v3
         with:
@@ -96,8 +98,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install toolchain
         run: |
-            sudo apt-get update
-            sudo apt-get install -yq build-essential crossbuild-essential-arm64 device-tree-compiler flex bison bc kmod cpio libssl-dev
+            sudo apt-get -yq update && sudo apt-get -yq upgrade
+            sudo apt-get -yq install build-essential crossbuild-essential-arm64 device-tree-compiler \
+            autoconf bc bison flex ccache cpio dkms fakeroot kmod quilt rsync dh-exec \
+            libssl-dev libncurses-dev libelf-dev libudev-dev libpci-dev libiberty-dev
       - name: Build Device Tree Deb Package
         run: |
           cd deb-pkg
