build_kernel: Don't upload debug package
It's massive.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -91,6 +91,7 @@ jobs:
           path: |
             linux-image-*.deb
             linux-libc-dev*.deb
+            !linux-image-*dbg*.deb
   build_dt_debs:
     runs-on: ubuntu-latest
     steps:
