--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -134,6 +134,8 @@ actions:
     mountpoints:
       - mountpoint: /
         partition: root
+        options:
+          - 'x-systemd.growfs'
     partitions:
       - name: idbloader
         fs: none
