--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -18,7 +18,7 @@ actions:
     mirror: {{ $mirror }}
   - action: apt
     description: Install base packages
-    recommends: false
+    recommends: true
     packages:
       - sudo
       - openssh-server
