--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -127,6 +127,13 @@ actions:
     command: rm /root/*.deb
 
   - action: run
+    description: Install unstable u-boot-menu
+    chroot: true
+    command: |
+      apt-get update
+      apt-get install -y u-boot-menu -t unstable
+
+  - action: run
     description: Set up u-boot default file
     chroot: true
     script: scripts/set-u-boot-defaults.sh {{ $board }}
