workflow: do_release: Try to fix the missing tag error
Of course things break the moment you try them on the main branch.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -197,6 +197,8 @@ jobs:
       - build_image
       - build_dt_debs
     steps:
+      - name: Clone workflow repository
+        uses: actions/checkout@v3
       - name: Download image artifacts
         uses: actions/download-artifact@v3
         with:
