workflow: Run on push, do_release on tag

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,12 +1,5 @@
 name: Build Quartz64 Images
-on:
-    workflow_dispatch:
-      inputs:
-        release-version:
-          description: 'Release Version'
-          required: false
-          default: 'unreleased'
-          type: string
+on: push
 jobs:
   build_uboot:
     strategy:
@@ -191,8 +184,8 @@ jobs:
           path: |
             *.img.xz
   do_release:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    if: ${{ inputs.release-version != 'unreleased' }}
     needs:
       - build_image
       - build_dt_debs
@@ -206,7 +199,6 @@ jobs:
       - name: Make release
         uses: softprops/action-gh-release@v0.1.15
         with:
-          name: ${{ inputs.release-version }}
           files: |
             artifacts/**/plebian*.img.xz
             artifacts/devicetrees-plebian-quartz64/devicetrees-plebian-*.deb
