--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -112,10 +112,10 @@ actions:
     destination: /etc/initramfs-tools/
 
   - action: run
-    description: Install kernel from Experimental
+    description: Install kernel from Sid
     chroot: true
     command: |
-      apt-get install -y linux-image-arm64 -t experimental
+      apt-get install -y linux-image-arm64 -t sid
 
   - action: run
     description: Set up u-boot default file
