debos/overlays: Remove apt overlay for Experimental
Now that we don't need Experimental anymore, remove it.
On a proper Bookworm/Stable system, Experimental (and Sid and Testing)
should not be available. If the user would still want them, they should
add it themselves. And if it breaks, they get to keep all the pieces ;-)

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -35,7 +35,7 @@ actions:
       echo "deb http://deb.debian.org/debian bookworm-updates main contrib non-free non-free-firmware" >> /etc/apt/sources.list
 
   - action: overlay
-    description: Copy apt config for Sid and Experimental
+    description: Copy apt config for Sid
     source: overlays/apt/
     destination: /etc/apt/
 
