debos: Enable mDNS by default
Multicast DNS allows connecting to the board with <hostname>.local
(assuming the client has a working mDNS resolver set up). This is
convenient for first time setup, as you don't have to look up what
IP your board grabbed, but can just type the hostname the board
will get followed by the ".local" TLD.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -107,6 +107,16 @@ actions:
       ln -s /usr/lib/systemd/system/regen-openssh-keys.service /etc/systemd/system/multi-user.target.wants/regen-openssh-keys.service
 
   - action: overlay
+    description: Copy resolved config fragments
+    source: overlays/resolved/
+    destination: /usr/lib/systemd/resolved.conf.d/
+
+  - action: overlay
+    description: Copy NetworkManager config fragments
+    source: overlays/networkmanager/
+    destination: /usr/lib/NetworkManager/conf.d/
+
+  - action: overlay
     description: Copy initramfs from Plebian
     source: overlays/initramfs-tools-plebian/
     destination: /etc/initramfs-tools/
