debos: Add initial set of firmware packages
The `bluez-firmware` package is highly likely needed for bluetooth
support, so add that.
The `firmware-brcm80211` package is likely needed for support for some
wifi devices, so add that too.

There is a reasonable chance more firmware packages are needed for
proper/full wifi support, but these 2 are almost certainly needed.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -47,6 +47,7 @@ actions:
       - alsa-utils
       - bash-completion
       - bluetooth
+      - bluez-firmware
       - bzip2
       - ca-certificates
       - console-data
@@ -54,6 +55,7 @@ actions:
       - dbus-broker
       - e2fsprogs
       - file
+      - firmware-brcm80211
       - gawk
       - initramfs-tools
       - liblockfile-bin
