workflow: Switch u-boot to being a submodule
This way, changes in u-boot are reflected in the workflow repository
by way of bumping the pinned submodule version, and it should be
included in the "Source code" archives github makes with releases.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -37,12 +37,10 @@ jobs:
       #  with:
       #    repository: 'rockchip-linux/rkbin'
       #    path: 'rkbin'
-      - name: Clone u-boot repository
+      - name: Clone workflow repository
         uses: actions/checkout@v3
         with:
-          repository: 'CounterPillow/u-boot-quartz64'
-          ref: 'deploy'
-          path: 'u-boot-quartz64'
+            submodules: true
       - name: Clean u-boot
         run: |
           cd u-boot-quartz64
